Bug 128129 - UI: Arrow Left / Right do not navigate in Sections list of dialog Tools > Options
Summary: UI: Arrow Left / Right do not navigate in Sections list of dialog Tools > Opt...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-10-14 04:11 UTC by Cor Nouws
Modified: 2019-10-23 10:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2019-10-14 04:11:59 UTC
Open Tools > Options
(Usually it opens on LibreOffice > User data)

Arrow down (OK)
Arrow left
   > Noting happens
   Expected: cursor jumps to section name LibreOffice
Arrow left (again)
   > Noting happens (again)
   Expected: section (LibreOffice) Collapses

This does not work in Version: 6.4.0.0.alpha0+
Build ID: d6ea967e040d01ec69649ac689472018e477db34
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-10-12_14:50:24
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded


This works in Version: 6.4.0.0.alpha0+
Build ID: c2c0bcfc64c5fc0b8299e3143ced482d481d2df0
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-09-18_02:53:35
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 raal 2019-10-16 16:23:13 UTC
works in Version: 6.4.0.0.alpha0+ (x64)
Build ID: 137e14ec4c3d3258df3802426b5ffe469f7fbde3
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win;
Comment 2 Xisco Faulí 2019-10-17 08:42:51 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=94d6fa11d086187b82adf9aa596e0f334827e095

author	Caolán McNamara <caolanm@redhat.com>	2019-09-17 12:50:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-09-20 21:20:51 +0200
commit 94d6fa11d086187b82adf9aa596e0f334827e095 (patch)
tree 4a44af903b2572efe89ae5e8aa67bb092644e038
parent 3c84b18f4f0fe4058de60b1c62149275ed858b79 (diff)
weld OfaTreeOptionsDialog

Bisected with: bibisect-linux64-6.4 

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2019-10-17 10:13:04 UTC
a pretty obscure feature
Comment 4 Commit Notification 2019-10-17 12:37:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d1b8b1a22136228dd6c31a44c1d19840c27c0cf7

Resolves: tdf#128129 add support for left/right expand/collapse

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-10-23 10:27:19 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: 437dc68285dab0f08a1ded2193d86d64f560cd9b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!