Resolves: tdf#128129 add support for left/right expand/collapse

Change-Id: I6c8f11e1e2b4192933541e754a078c4d0ff58206
Reviewed-on: https://gerrit.libreoffice.org/80938
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>